Home Page Banner Overflow fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1384,7 +1384,6 @@
 					display: block;
 					position: absolute;
 					z-index: 1;
-					width: 100%;
 					bottom: 50px;
 					left: 350px;
 					font-size: 1.3em;
